feat(stream): add session validation, enhance SSE/WebSocket security
- Add SessionValidator and SessionValidationResult for stream auth
- Enhance SseStreamController with heartbeat, reconnect, validation
- Enhance WebSocketStreamHandler with session validation and cleanup
- Add security configuration for stream session validation
- Update StreamMessage with metadata support
- Update StreamSession with validation state tracking
- Update EventStreamHandler for new session model
- Update SimpliXExceptionHandler error response format
- Update all related tests